@startuml

title __INTERPRETER's Class Diagram__\n

  package by.training.task3.interpreter {
    class ClientCalculator {
        - listExpression : ArrayList<AbstractExpression>
        + ClientCalculator()
        + calculateExpression()
        - parseToExpressions()
        - parseToPostFix()
        - getPriority()
        - isOperator()
    }
  }
  

  package by.training.task3.interpreter {
    class Context {
        - contextValues : ArrayDeque<Integer>
        + popValue()
        + pushValue()
    }
  }
  

  package by.training.task3.interpreter {
    class NonTerminalExpressionNumber {
        - number : int
        + NonTerminalExpressionNumber()
        + interpret()
    }
  }
  

  package by.training.task3.interpreter {
    class TerminalExpressionAND {
        + interpret()
    }
  }
  

  package by.training.task3.interpreter {
    class TerminalExpressionLeftShift {
        + interpret()
    }
  }
  

  package by.training.task3.interpreter {
    class TerminalExpressionNOT {
        + interpret()
    }
  }
  

  package by.training.task3.interpreter {
    class TerminalExpressionOR {
        + interpret()
    }
  }
  

  package by.training.task3.interpreter {
    class TerminalExpressionRightShift {
        + interpret()
    }
  }
  

  package by.training.task3.interpreter {
    class TerminalExpressionUnsignedRightShift {
        + interpret()
    }
  }
  

  package by.training.task3.interpreter {
    class TerminalExpressionXOR {
        + interpret()
    }
  }
  

  NonTerminalExpressionNumber -up-|> AbstractExpression
  TerminalExpressionAND -up-|> AbstractExpression
  TerminalExpressionLeftShift -up-|> AbstractExpression
  TerminalExpressionNOT -up-|> AbstractExpression
  TerminalExpressionOR -up-|> AbstractExpression
  TerminalExpressionRightShift -up-|> AbstractExpression
  TerminalExpressionUnsignedRightShift -up-|> AbstractExpression
  TerminalExpressionXOR -up-|> AbstractExpression


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
